Start Script Work

--- a/config/Metallurgy.cfg
+++ b/config/Metallurgy.cfg
@@ -24,11 +24,11 @@ generators {
     B:Manganese=true
     B:Meutoite=true
     B:Midasium=true
-    B:Mithril=true
+    B:Mithril=false
     B:Orichalcum=true
     B:Oureclase=true
     B:Phosphorite=true
-    B:Platinum=true
+    B:Platinum=false
     B:Potash=true
     B:Prometheum=true
     B:Rubracium=true
@@ -1013,11 +1013,11 @@ recipes_armour {
     B:atlarus=true
     B:black_steel=true
     B:brass=true
-    B:bronze=true
+    B:bronze=false
     B:carmot=true
     B:celenegil=true
     B:ceruclase=true
-    B:copper=true
+    B:copper=false
     B:damascus_steel=true
     B:deep_iron=true
     B:desichalkos=true
@@ -1029,17 +1029,17 @@ recipes_armour {
     B:inolashite=true
     B:kalendrite=true
     B:midasium=true
-    B:mithril=true
+    B:mithril=false
     B:orichalcum=true
     B:oureclase=true
-    B:platinum=true
+    B:platinum=false
     B:prometheum=true
     B:quicksilver=true
     B:sanguinite=true
     B:shadow_iron=true
     B:shadow_steel=true
-    B:silver=true
-    B:steel=true
+    B:silver=false
+    B:steel=false
     B:tartarite=true
     B:vulcanite=true
     B:vyroxeres=true
@@ -1054,11 +1054,11 @@ recipes_weapons {
     B:atlarus=true
     B:black_steel=true
     B:brass=true
-    B:bronze=true
+    B:bronze=false
     B:carmot=true
     B:celenegil=true
     B:ceruclase=true
-    B:copper=true
+    B:copper=false
     B:damascus_steel=true
     B:deep_iron=true
     B:desichalkos=true
@@ -1070,17 +1070,17 @@ recipes_weapons {
     B:inolashite=true
     B:kalendrite=true
     B:midasium=true
-    B:mithril=true
+    B:mithril=false
     B:orichalcum=true
     B:oureclase=true
-    B:platinum=true
+    B:platinum=false
     B:prometheum=true
     B:quicksilver=true
     B:sanguinite=true
     B:shadow_iron=true
     B:shadow_steel=true
-    B:silver=true
-    B:steel=true
+    B:silver=false
+    B:steel=false
     B:tartarite=true
     B:vulcanite=true
     B:vyroxeres=true
