--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ OpenComputersMod-1.7.4.1265-lua52-native.64.dll
 OpenComputersMod-1.7.4.1265-lua53-native.64.dll
 
 usernamecache.json
+
+screenshots/
+
+OpenComputersMod-1.7.5.1290-lua52-native.64.dll
+
+OpenComputersMod-1.7.5.1290-lua53-native.64.dll
