Begin Quest Work, Tweak a couple Age 0/1 Items

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -11931,10 +11931,15 @@ twilightforest {
     B:tileCastleBrick.1=true
     B:tileCastleBrick.2=true
     B:tileCastleBrick.3=true
+    B:tileCastleDoor=true
+    B:tileCastleDoorVanished=false
     B:tileCastleMagic=true
     B:tileCastleMagic.1=true
     B:tileCastleMagic.2=true
     B:tileCastleMagic.3=true
+    B:tileCinderFurnaceIdle=false
+    B:tileCinderFurnaceLit=false
+    B:tileCinderLog=true
     B:tileDarkLeaves=true
     B:tileFluffyCloud=true
     B:tileForceField=false
