--- a/config/aobdsingularities.cfg
+++ b/config/aobdsingularities.cfg
@@ -84,8 +84,20 @@ Iridium {
 }
 
 
+Ironwood {
+    I:"Amount of blocks needed for a singularity"=400
+    B:Enabled=true
+}
+
+
 Kalendrite {
     I:"Amount of blocks needed for a singularity"=100
+    B:Enabled=true
+}
+
+
+Knightmetal {
+    I:"Amount of blocks needed for a singularity"=400
     B:Enabled=true
 }
 
