--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Fri Dec 13 16:36:26 EST 2019
+#Fri Sep 25 17:53:43 EDT 2020
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
