--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ screenshots/
 OpenComputersMod-1.7.5.1290-lua52-native.64.dll
 
 OpenComputersMod-1.7.5.1290-lua53-native.64.dll
+
+backups/
+
+crash-reports/
