--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -679,6 +679,7 @@ wellofsufferingblacklist {
     B:"TwilightForest.Forest Squirrel"=false
     B:"TwilightForest.Giant Miner"=false
     B:"TwilightForest.Glacier Penguin"=false
+    B:"TwilightForest.Harbinger Cube"=false
     B:"TwilightForest.Hedge Spider"=false
     B:"TwilightForest.Helmet Crab"=false
     B:"TwilightForest.Hostile Wolf"=false
@@ -702,6 +703,7 @@ wellofsufferingblacklist {
     B:TwilightForest.Redcap=false
     B:"TwilightForest.Redcap Sapper"=false
     B:"TwilightForest.Redscale Broodling"=false
+    B:TwilightForest.RovingCube=false
     B:"TwilightForest.Skeleton Druid"=false
     B:"TwilightForest.Slime Beetle"=false
     B:"TwilightForest.Snow Queen"=false
