--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Fri Dec 13 16:37:49 EST 2019
+#Fri Sep 25 17:55:04 EDT 2020
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
