--- a/config/MouseTweaks.cfg
+++ b/config/MouseTweaks.cfg
@@ -1,8 +1,8 @@
-#Fri Dec 13 18:18:31 EST 2019
+#Fri Sep 25 20:03:28 EDT 2020
 WheelTweak=1
 LMBTweakWithoutItem=1
-WheelSearchOrder=1
-LMBTweakWithItem=1
 RMBTweak=1
+LMBTweakWithItem=1
+WheelSearchOrder=1
 OnTickMethodOrder=Forge, LiteLoader, Minecraft
 Debug=0
