Catch Quests up to Scripts, Plates now take 2 ingots with a Forge Hammer

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -248,6 +248,8 @@ aobd {
     B:blockCadmium=true
     B:blockIndium=true
     B:blockIridium=true
+    B:blockIronwood=true
+    B:blockKnightmetal=true
     B:blockMercury=true
     B:blockRutile=true
     B:blockTitanium=true
