Add/Swap/Update Mods

--- a/config/SSTOW/BlackList.cfg
+++ b/config/SSTOW/BlackList.cfg
@@ -393,9 +393,14 @@
     B:enderzoo.FallenMount=false
     B:enderzoo.WitherCat=false
     B:enderzoo.WitherWitch=false
+    B:etfuturum.bee=false
+    B:etfuturum.brown_mooshroom=false
     B:etfuturum.endermite=false
+    B:etfuturum.husk=false
     B:etfuturum.rabbit=false
+    B:etfuturum.shulker=false
     B:etfuturum.snow_golem=false
+    B:etfuturum.stray=false
     B:etfuturum.villager_zombie=false
     B:etfuturum.wooden_armorstand=false
     B:excompressum.AngryChicken=false
@@ -408,6 +413,26 @@
     B:hardcorewither.SkeletonMinion=false
     B:mad_scientist=false
     B:mutant_scientist=false
+    B:netherlicious.Ashling=false
+    B:netherlicious.BlazeKnight=false
+    B:netherlicious.CrimsonRay=false
+    B:netherlicious.Ember=false
+    B:netherlicious.EmberFoxfire=false
+    B:netherlicious.EmberShadow=false
+    B:netherlicious.EmberSoul=false
+    B:netherlicious.FoxfireRay=false
+    B:netherlicious.Hoglin=false
+    B:netherlicious.Piglin=false
+    B:netherlicious.Skull=false
+    B:netherlicious.SkullWither=false
+    B:netherlicious.Smolder=false
+    B:netherlicious.SporeCrimson=false
+    B:netherlicious.SporeFoxfire=false
+    B:netherlicious.SporeWarped=false
+    B:netherlicious.Strider=false
+    B:netherlicious.WarpedRay=false
+    B:netherlicious.Zoglin=false
+    B:netherlicious.ZombiePiglin=false
     B:ranged_rogue_android=false
     B:rogue_android=false
     B:testdummy.Dummy=false
