--- a/config/aobdsingularities.cfg
+++ b/config/aobdsingularities.cfg
@@ -48,6 +48,12 @@ DeepIron {
 }
 
 
+Efrine {
+    I:"Amount of blocks needed for a singularity"=400
+    B:Enabled=true
+}
+
+
 Eximite {
     I:"Amount of blocks needed for a singularity"=100
     B:Enabled=true
