--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -810,16 +810,41 @@ wellofsufferingblacklist {
     B:enderzoo.FallenMount=false
     B:enderzoo.WitherCat=false
     B:enderzoo.WitherWitch=false
+    B:etfuturum.bee=false
+    B:etfuturum.brown_mooshroom=false
     B:etfuturum.ender_dragon=false
     B:etfuturum.endermite=false
+    B:etfuturum.husk=false
     B:etfuturum.rabbit=false
+    B:etfuturum.shulker=false
     B:etfuturum.snow_golem=false
+    B:etfuturum.stray=false
     B:etfuturum.villager_zombie=false
     B:etfuturum.wooden_armorstand=false
     B:excompressum.AngryChicken=false
     B:hardcorewither.BlazeMinion=false
     B:hardcorewither.GhastMinion=false
     B:hardcorewither.SkeletonMinion=false
+    B:netherlicious.Ashling=false
+    B:netherlicious.BlazeKnight=false
+    B:netherlicious.CrimsonRay=false
+    B:netherlicious.Ember=false
+    B:netherlicious.EmberFoxfire=false
+    B:netherlicious.EmberShadow=false
+    B:netherlicious.EmberSoul=false
+    B:netherlicious.FoxfireRay=false
+    B:netherlicious.Hoglin=false
+    B:netherlicious.Piglin=false
+    B:netherlicious.Skull=false
+    B:netherlicious.SkullWither=false
+    B:netherlicious.Smolder=false
+    B:netherlicious.SporeCrimson=false
+    B:netherlicious.SporeFoxfire=false
+    B:netherlicious.SporeWarped=false
+    B:netherlicious.Strider=false
+    B:netherlicious.WarpedRay=false
+    B:netherlicious.Zoglin=false
+    B:netherlicious.ZombiePiglin=false
     B:testdummy.Dummy=false
     B:witchery.attackbat=false
     B:witchery.babayaga=false
