--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -329,30 +329,44 @@ shedding {
     I:Bat.lexiconDisplaySize=40
     I:Bat.metadata=0
     I:Bat.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Bird
     S:BiomesOPlenty.Bird.item=
     I:BiomesOPlenty.Bird.lexiconDisplaySize=40
     I:BiomesOPlenty.Bird.metadata=0
     I:BiomesOPlenty.Bird.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Glob
     S:BiomesOPlenty.Glob.item=
     I:BiomesOPlenty.Glob.lexiconDisplaySize=40
     I:BiomesOPlenty.Glob.metadata=0
     I:BiomesOPlenty.Glob.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.JungleSpider
     S:BiomesOPlenty.JungleSpider.item=
     I:BiomesOPlenty.JungleSpider.lexiconDisplaySize=40
     I:BiomesOPlenty.JungleSpider.metadata=0
     I:BiomesOPlenty.JungleSpider.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Phantom
     S:BiomesOPlenty.Phantom.item=
     I:BiomesOPlenty.Phantom.lexiconDisplaySize=40
     I:BiomesOPlenty.Phantom.metadata=0
     I:BiomesOPlenty.Phantom.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Pixie
     S:BiomesOPlenty.Pixie.item=
     I:BiomesOPlenty.Pixie.lexiconDisplaySize=40
     I:BiomesOPlenty.Pixie.metadata=0
     I:BiomesOPlenty.Pixie.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Rosester
     S:BiomesOPlenty.Rosester.item=
     I:BiomesOPlenty.Rosester.lexiconDisplaySize=40
     I:BiomesOPlenty.Rosester.metadata=0
     I:BiomesOPlenty.Rosester.rate=-1
+
+    # Configuration of Shedding for BiomesOPlenty.Wasp
     S:BiomesOPlenty.Wasp.item=
     I:BiomesOPlenty.Wasp.lexiconDisplaySize=40
     I:BiomesOPlenty.Wasp.metadata=0
@@ -2305,26 +2319,68 @@ shedding {
     I:enderzoo.WitherWitch.lexiconDisplaySize=40
     I:enderzoo.WitherWitch.metadata=0
     I:enderzoo.WitherWitch.rate=-1
+
+    # Configuration of Shedding for etfuturum.bee
+    S:etfuturum.bee.item=
+    I:etfuturum.bee.lexiconDisplaySize=40
+    I:etfuturum.bee.metadata=0
+    I:etfuturum.bee.rate=-1
+
+    # Configuration of Shedding for etfuturum.brown_mooshroom
+    S:etfuturum.brown_mooshroom.item=
+    I:etfuturum.brown_mooshroom.lexiconDisplaySize=40
+    I:etfuturum.brown_mooshroom.metadata=0
+    I:etfuturum.brown_mooshroom.rate=-1
+
+    # Configuration of Shedding for etfuturum.ender_dragon
     S:etfuturum.ender_dragon.item=
     I:etfuturum.ender_dragon.lexiconDisplaySize=40
     I:etfuturum.ender_dragon.metadata=0
     I:etfuturum.ender_dragon.rate=-1
+
+    # Configuration of Shedding for etfuturum.endermite
     S:etfuturum.endermite.item=
     I:etfuturum.endermite.lexiconDisplaySize=40
     I:etfuturum.endermite.metadata=0
     I:etfuturum.endermite.rate=-1
+
+    # Configuration of Shedding for etfuturum.husk
+    S:etfuturum.husk.item=
+    I:etfuturum.husk.lexiconDisplaySize=40
+    I:etfuturum.husk.metadata=0
+    I:etfuturum.husk.rate=-1
+
+    # Configuration of Shedding for etfuturum.rabbit
     S:etfuturum.rabbit.item=
     I:etfuturum.rabbit.lexiconDisplaySize=40
     I:etfuturum.rabbit.metadata=0
     I:etfuturum.rabbit.rate=-1
+
+    # Configuration of Shedding for etfuturum.shulker
+    S:etfuturum.shulker.item=
+    I:etfuturum.shulker.lexiconDisplaySize=40
+    I:etfuturum.shulker.metadata=0
+    I:etfuturum.shulker.rate=-1
+
+    # Configuration of Shedding for etfuturum.snow_golem
     S:etfuturum.snow_golem.item=
     I:etfuturum.snow_golem.lexiconDisplaySize=40
     I:etfuturum.snow_golem.metadata=0
     I:etfuturum.snow_golem.rate=-1
+
+    # Configuration of Shedding for etfuturum.stray
+    S:etfuturum.stray.item=
+    I:etfuturum.stray.lexiconDisplaySize=40
+    I:etfuturum.stray.metadata=0
+    I:etfuturum.stray.rate=-1
+
+    # Configuration of Shedding for etfuturum.villager_zombie
     S:etfuturum.villager_zombie.item=
     I:etfuturum.villager_zombie.lexiconDisplaySize=40
     I:etfuturum.villager_zombie.metadata=0
     I:etfuturum.villager_zombie.rate=-1
+
+    # Configuration of Shedding for etfuturum.wooden_armorstand
     S:etfuturum.wooden_armorstand.item=
     I:etfuturum.wooden_armorstand.lexiconDisplaySize=40
     I:etfuturum.wooden_armorstand.metadata=0
@@ -2345,6 +2401,126 @@ shedding {
     I:hardcorewither.SkeletonMinion.lexiconDisplaySize=40
     I:hardcorewither.SkeletonMinion.metadata=0
     I:hardcorewither.SkeletonMinion.rate=-1
+
+    # Configuration of Shedding for netherlicious.Ashling
+    S:netherlicious.Ashling.item=
+    I:netherlicious.Ashling.lexiconDisplaySize=40
+    I:netherlicious.Ashling.metadata=0
+    I:netherlicious.Ashling.rate=-1
+
+    # Configuration of Shedding for netherlicious.BlazeKnight
+    S:netherlicious.BlazeKnight.item=
+    I:netherlicious.BlazeKnight.lexiconDisplaySize=40
+    I:netherlicious.BlazeKnight.metadata=0
+    I:netherlicious.BlazeKnight.rate=-1
+
+    # Configuration of Shedding for netherlicious.CrimsonRay
+    S:netherlicious.CrimsonRay.item=
+    I:netherlicious.CrimsonRay.lexiconDisplaySize=40
+    I:netherlicious.CrimsonRay.metadata=0
+    I:netherlicious.CrimsonRay.rate=-1
+
+    # Configuration of Shedding for netherlicious.Ember
+    S:netherlicious.Ember.item=
+    I:netherlicious.Ember.lexiconDisplaySize=40
+    I:netherlicious.Ember.metadata=0
+    I:netherlicious.Ember.rate=-1
+
+    # Configuration of Shedding for netherlicious.EmberFoxfire
+    S:netherlicious.EmberFoxfire.item=
+    I:netherlicious.EmberFoxfire.lexiconDisplaySize=40
+    I:netherlicious.EmberFoxfire.metadata=0
+    I:netherlicious.EmberFoxfire.rate=-1
+
+    # Configuration of Shedding for netherlicious.EmberShadow
+    S:netherlicious.EmberShadow.item=
+    I:netherlicious.EmberShadow.lexiconDisplaySize=40
+    I:netherlicious.EmberShadow.metadata=0
+    I:netherlicious.EmberShadow.rate=-1
+
+    # Configuration of Shedding for netherlicious.EmberSoul
+    S:netherlicious.EmberSoul.item=
+    I:netherlicious.EmberSoul.lexiconDisplaySize=40
+    I:netherlicious.EmberSoul.metadata=0
+    I:netherlicious.EmberSoul.rate=-1
+
+    # Configuration of Shedding for netherlicious.FoxfireRay
+    S:netherlicious.FoxfireRay.item=
+    I:netherlicious.FoxfireRay.lexiconDisplaySize=40
+    I:netherlicious.FoxfireRay.metadata=0
+    I:netherlicious.FoxfireRay.rate=-1
+
+    # Configuration of Shedding for netherlicious.Hoglin
+    S:netherlicious.Hoglin.item=
+    I:netherlicious.Hoglin.lexiconDisplaySize=40
+    I:netherlicious.Hoglin.metadata=0
+    I:netherlicious.Hoglin.rate=-1
+
+    # Configuration of Shedding for netherlicious.Piglin
+    S:netherlicious.Piglin.item=
+    I:netherlicious.Piglin.lexiconDisplaySize=40
+    I:netherlicious.Piglin.metadata=0
+    I:netherlicious.Piglin.rate=-1
+
+    # Configuration of Shedding for netherlicious.Skull
+    S:netherlicious.Skull.item=
+    I:netherlicious.Skull.lexiconDisplaySize=40
+    I:netherlicious.Skull.metadata=0
+    I:netherlicious.Skull.rate=-1
+
+    # Configuration of Shedding for netherlicious.SkullWither
+    S:netherlicious.SkullWither.item=
+    I:netherlicious.SkullWither.lexiconDisplaySize=40
+    I:netherlicious.SkullWither.metadata=0
+    I:netherlicious.SkullWither.rate=-1
+
+    # Configuration of Shedding for netherlicious.Smolder
+    S:netherlicious.Smolder.item=
+    I:netherlicious.Smolder.lexiconDisplaySize=40
+    I:netherlicious.Smolder.metadata=0
+    I:netherlicious.Smolder.rate=-1
+
+    # Configuration of Shedding for netherlicious.SporeCrimson
+    S:netherlicious.SporeCrimson.item=
+    I:netherlicious.SporeCrimson.lexiconDisplaySize=40
+    I:netherlicious.SporeCrimson.metadata=0
+    I:netherlicious.SporeCrimson.rate=-1
+
+    # Configuration of Shedding for netherlicious.SporeFoxfire
+    S:netherlicious.SporeFoxfire.item=
+    I:netherlicious.SporeFoxfire.lexiconDisplaySize=40
+    I:netherlicious.SporeFoxfire.metadata=0
+    I:netherlicious.SporeFoxfire.rate=-1
+
+    # Configuration of Shedding for netherlicious.SporeWarped
+    S:netherlicious.SporeWarped.item=
+    I:netherlicious.SporeWarped.lexiconDisplaySize=40
+    I:netherlicious.SporeWarped.metadata=0
+    I:netherlicious.SporeWarped.rate=-1
+
+    # Configuration of Shedding for netherlicious.Strider
+    S:netherlicious.Strider.item=
+    I:netherlicious.Strider.lexiconDisplaySize=40
+    I:netherlicious.Strider.metadata=0
+    I:netherlicious.Strider.rate=-1
+
+    # Configuration of Shedding for netherlicious.WarpedRay
+    S:netherlicious.WarpedRay.item=
+    I:netherlicious.WarpedRay.lexiconDisplaySize=40
+    I:netherlicious.WarpedRay.metadata=0
+    I:netherlicious.WarpedRay.rate=-1
+
+    # Configuration of Shedding for netherlicious.Zoglin
+    S:netherlicious.Zoglin.item=
+    I:netherlicious.Zoglin.lexiconDisplaySize=40
+    I:netherlicious.Zoglin.metadata=0
+    I:netherlicious.Zoglin.rate=-1
+
+    # Configuration of Shedding for netherlicious.ZombiePiglin
+    S:netherlicious.ZombiePiglin.item=
+    I:netherlicious.ZombiePiglin.lexiconDisplaySize=40
+    I:netherlicious.ZombiePiglin.metadata=0
+    I:netherlicious.ZombiePiglin.rate=-1
     S:testdummy.Dummy.item=
     I:testdummy.Dummy.lexiconDisplaySize=40
     I:testdummy.Dummy.metadata=0
