--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sat Oct 03 19:54:22 EDT 2020
+#Fri Jan 19 17:08:52 EST 2024
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
