--- a/config/SpiceOfLife.cfg
+++ b/config/SpiceOfLife.cfg
@@ -26,6 +26,18 @@ client {
 
 
 ##########################################################################################################
+# dev
+#--------------------------------------------------------------------------------------------------------#
+# These config settings are only for developers
+##########################################################################################################
+
+dev {
+    # If true, enables extra logging to help modpack developers
+    B:dev.logging.enabled=false
+}
+
+
+##########################################################################################################
 # foodgroups
 #--------------------------------------------------------------------------------------------------------#
 # Food groups are defined using .json files in /config/SpiceOfLife/
@@ -51,7 +63,7 @@ server {
     # If true, foods' saturation modifier will be multiplied by the current nutritional value
     # NOTE: When affect.food.hunger.values is true, saturation bonuses of foods will automatically decrease as the hunger value of the food decreases
     # Setting this to true when affect.food.hunger.values is true will make saturation bonuses decrease disproportionately more than hunger values
-    # Setting this to true and affect.food.saturation.modifiers to false will make diminishing returns affect saturation only
+    # Setting this to true and affect.food.hunger.values to false will make diminishing returns affect saturation only
     B:affect.food.saturation.modifiers=false
 
     # If true, foods with negative hunger values will be made more negative as nutritional value decreases
@@ -61,13 +73,7 @@ server {
     # If true, foods with negative saturation modifiers will be made more negative as nutritional value decreases
     # NOTE: affect.food.saturation.modifiers must be true for this to have any affect
     B:affect.negative.food.saturation.modifiers=false
-
-    # If true, a player's food history will be empty once they pass the new.player.food.eaten.threshold
-    # If false, any food eaten before the threshold is passed will also count after it is passed
     B:clear.history.after.food.eaten.threshold.reached=false
-
-    # The chance for food to drop from an open food container when the player jumps
-    # Temporarily disabled while a better implementation is written (this config option will do nothing)
     D:food.containers.chance.to.drop.food=0.25
 
     # The maximum stacksize per slot in a food container
@@ -110,14 +116,12 @@ server {
     # 	food_group_count : The number of food groups that the food belongs to
     # 	distinct_food_groups_eaten : The number of distinct food groups in the player's current food history
     # 	total_food_groups : The total number of enabled food groups
+    # 	exact_count : The number of times the food (ignoring food groups) has been eaten within the food history
     # 
     S:food.modifier.formula=MAX(0, (1 - count/12))^MIN(8, food_hunger_value)
 
     # If true, a food journal will be given to each player as a starting item
     B:give.food.journal.as.starting.item=false
-
-    # If true, a food journal will be given to each player once diminishing returns start for them
-    # Not given if a player was given a food journal by give.food.journal.as.starting.item
     B:give.food.journal.on.dimishing.returns.start=false
 
     # The number of times a new player (by World) needs to eat before this mod has any effect
@@ -125,21 +129,8 @@ server {
 
     # If true, any foods not in a food group will be excluded from diminishing returns
     B:use.food.groups.as.whitelists=false
-
-    # If true, food.history.length will use amount of hunger restored instead of number of foods eaten for its maximum length
-    # For example, a food.history.length length of 12 will store a max of 2 foods that restored 6 hunger each, 
-    # 3 foods that restored 4 hunger each, 12 foods that restored 1 hunger each, etc
-    # NOTE: food.history.length uses hunger units, where 1 hunger unit = 1/2 hunger bar
     B:use.hunger.restored.for.food.history.length=false
-
-    # If true, food.history.length will use time (in Minecraft days) instead of number of foods eaten for its maximum length
-    # For example, a food.history.length length of 12 will store all foods eaten in the last 12 Minecraft days.
-    # Note: On servers, time only advances for each player while they are logged in unless use.time.progress.time.while.logged.off is set to true
-    # Also note: use.hunger.restored.for.food.history.length must be false for this config option to take effect
     B:use.time.for.food.history.length=false
-
-    # If true, food history time will still progress for each player while that player is logged out.
-    # NOTE: use.time.for.food.history.length must be true for this to have any affect
     B:use.time.progress.time.while.logged.off=false
 }
 
