--- a/config/ThaumcraftMobAspects/etfuturum.cfg
+++ b/config/ThaumcraftMobAspects/etfuturum.cfg
@@ -1,7 +1,7 @@
 [
   {
     "_HEADER": "*****************************************",
-    "entityName": "etfuturum.wooden_armorstand",
+    "entityName": "etfuturum.brown_mooshroom",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
@@ -15,7 +15,7 @@
   },
   {
     "_HEADER": "*****************************************",
-    "entityName": "etfuturum.ender_dragon",
+    "entityName": "etfuturum.chest_boat",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
@@ -43,14 +43,7 @@
   },
   {
     "_HEADER": "*****************************************",
-    "entityName": "etfuturum.rabbit",
-    "_FOOTER": "*****************************************",
-    "_COMMENT": "Aspects are in the form aspect : value ",
-    "aspects": {}
-  },
-  {
-    "_HEADER": "*****************************************",
-    "entityName": "etfuturum.lingering_effect",
+    "entityName": "etfuturum.shulker_candy",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
@@ -65,6 +58,90 @@
   {
     "_HEADER": "*****************************************",
     "entityName": "etfuturum.tipped_arrow",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.boosting_firework_rocket",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.bee",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.wooden_armorstand",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.new_boat",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.new_boat_seat",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.ender_dragon",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.shulker",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.rabbit",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.lingering_effect",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.husk",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.fireproof_item",
+    "_FOOTER": "*****************************************",
+    "_COMMENT": "Aspects are in the form aspect : value ",
+    "aspects": {}
+  },
+  {
+    "_HEADER": "*****************************************",
+    "entityName": "etfuturum.stray",
     "_FOOTER": "*****************************************",
     "_COMMENT": "Aspects are in the form aspect : value ",
     "aspects": {}
