--- a/config/etfuturum/etfuturum.cfg
+++ b/config/etfuturum/etfuturum.cfg
@@ -56,3 +56,16 @@ general {
 }
 
 
+##########################################################################################################
+# warned
+#--------------------------------------------------------------------------------------------------------#
+# This is added if we've warned you this file exists.
+# Used by versions that split the config into different files, rendering this file unused.
+# This was done because the current file was becoming difficult to navigate.
+##########################################################################################################
+
+warned {
+    B:configWarningShown=false
+}
+
+
