--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Oct 3, 2020 7:52:45 PM
+; created Jan 19, 2024 5:07:27 PM
 ;---
 
 ; Settings which have some effect on gameplay or visuals.
@@ -53,7 +53,7 @@ lagWarningInterval = 300
 ; Specify whether Fastcraft should enable its culling tweaks.
 ; This option causes parts of the world that aren't possibly visible to not be rendered.
 ; Valid values: true, false. default: true.
-enableCullingTweaks = true
+enableCullingTweaks = false
 ; Specify if the font renderer may be tweaked by Fastcraft.
 ; Disabling this setting can resolve compatibility issues with conflicting mods, but performance
 ; with lots of rendered text may suffer.
