--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Sat Oct 03 19:52:51 EDT 2020
+#Fri Jan 19 17:07:32 EST 2024
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
